--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script>src="javascript.js"</script>
 </head>
 <body>
-    <p>Esta página web es una página HTML válida</p>
+    <p>Esta es la pagina web de marcos</p>
 </body>
 </html>
