--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <script>src="javascript.js"</script>
 </head>
 <body>
-<<<<<<< HEAD
-    <p>Esta es la página de Dennis</p>
-=======
-    <p>Esta es la pagina web de marcos</p>
->>>>>>> f2414b6729da9bd095672436e3d6ad8103cdf433
+    <p>Esta es la página de Dennis y Marcos</p>
 </body>
 </html>
